Reloading pages with shared Wasm memory in workers leads to memory leaks https://bugs.webkit.org/show_bug.cgi?id=281657 rdar://138547094

Reviewed by Mark Lam.

Previously, [1] introduced a termination mechanism for Atomics.wait.
So, waitImpl in WasmOperationsInlines.h should also throw termination
exceptions when necessary. Otherwise, worker threads may not terminate
as expected.

[1] https://commits.webkit.org/282974@main

* Source/JavaScriptCore/wasm/WasmOperationsInlines.h:
(JSC::Wasm::waitImpl):

Canonical link: https://commits.webkit.org/285841@main